checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000244411.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '51f3547d619956e9b428bfff17004d8f4d259a02', maybe rebased or not pulled?
#27: 
commit 51f3547d619956e9b428bfff17004d8f4d259a02

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#35: 
/home/bunk/linux/kernel-2.6/git/linux-2.6/arch/sh/mm/init.c:232: error: implicit declaration of function 'p3_cache_init'

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#41: 
/home/bunk/linux/kernel-2.6/git/linux-2.6/kernel/fork.c:323: error: implicit declaration of function 'flush_dcache_mmap_lock'

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#42: 
/home/bunk/linux/kernel-2.6/git/linux-2.6/kernel/fork.c:325: error: implicit declaration of function 'flush_dcache_mmap_unlock'

ERROR:SPACING: space required after that ',' (ctx:VxV)
#66: FILE: arch/sh/include/cpu-sh3/cpu/cacheflush.h:38:
+#define flush_icache_user_range(vma,pg,adr,len)	do { } while (0)
                                    ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:SPACING: space required after that ',' (ctx:VxV)
#66: FILE: arch/sh/include/cpu-sh3/cpu/cacheflush.h:38:
+#define flush_icache_user_range(vma,pg,adr,len)	do { } while (0)
                                       ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#66: FILE: arch/sh/include/cpu-sh3/cpu/cacheflush.h:38:
+#define flush_icache_user_range(vma,pg,adr,len)	do { } while (0)
                                           ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000244411.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 3 errors, 4 warnings, 0 checks, 16 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000244411.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
